[gd_scene load_steps=11 format=3 uid="uid://loi804kpfwop"]

[ext_resource type="Script" path="res://Resources/splitscreen.gd" id="1_kqktd"]
[ext_resource type="PackedScene" uid="uid://c4i0kiiyqsnlp" path="res://Scenes/constant_ui.tscn" id="2_dhrqv"]
[ext_resource type="Texture2D" uid="uid://bx0ee7exof3ms" path="res://Resources/square.png" id="2_wktmx"]
[ext_resource type="Script" path="res://Resources/CameraScript.gd" id="2_xgshd"]
[ext_resource type="PackedScene" uid="uid://baajkcg4mw3jk" path="res://Scenes/Player1.tscn" id="3_bf0t6"]
[ext_resource type="PackedScene" uid="uid://gsgjnsn2aypm" path="res://Scenes/Player2.tscn" id="4_5vj0a"]
[ext_resource type="PackedScene" uid="uid://c3y0ckuevbl3t" path="res://Scenes/stopwatch_ui.tscn" id="6_y7r0x"]
[ext_resource type="Script" path="res://Resources/Camera2D2.gd" id="8_86p24"]
[ext_resource type="FontFile" uid="uid://xr3kdpi70bvj" path="res://Resources/Pixellari.ttf" id="8_rf7dl"]

[sub_resource type="LabelSettings" id="LabelSettings_l3wqi"]
font = ExtResource("8_rf7dl")
font_size = 200

[node name="Node" type="Node"]
process_mode = 3
script = ExtResource("1_kqktd")

[node name="ConstantUI" parent="." instance=ExtResource("2_dhrqv")]

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_wktmx")
expand_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
process_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Viewport1" type="SubViewportContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="SubViewport1" type="SubViewport" parent="HBoxContainer/Viewport1"]
handle_input_locally = false
size = Vector2i(958, 1080)
render_target_update_mode = 4

[node name="Camera2D" type="Camera2D" parent="HBoxContainer/Viewport1/SubViewport1"]
process_mode = 3
zoom = Vector2(0.6, 0.6)
script = ExtResource("2_xgshd")

[node name="AudioListener2D" type="AudioListener2D" parent="HBoxContainer/Viewport1/SubViewport1/Camera2D"]

[node name="Player1" parent="HBoxContainer/Viewport1/SubViewport1" instance=ExtResource("3_bf0t6")]
unique_name_in_owner = true
position = Vector2(0, 150)

[node name="Player2" parent="HBoxContainer/Viewport1/SubViewport1" instance=ExtResource("4_5vj0a")]
unique_name_in_owner = true
position = Vector2(0, -150)

[node name="Viewport2" type="SubViewportContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="SubViewport2" type="SubViewport" parent="HBoxContainer/Viewport2"]
handle_input_locally = false
size = Vector2i(958, 1080)
render_target_update_mode = 4

[node name="Camera2D" type="Camera2D" parent="HBoxContainer/Viewport2/SubViewport2"]
process_mode = 3
zoom = Vector2(0.6, 0.6)
script = ExtResource("8_86p24")

[node name="StopwatchUI" parent="." instance=ExtResource("6_y7r0x")]
unique_name_in_owner = true

[node name="Label" type="Label" parent="."]
offset_left = 333.0
offset_top = 147.0
offset_right = 1588.0
offset_bottom = 550.0
text = "Countdown"
label_settings = SubResource("LabelSettings_l3wqi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
